# frequency-forensics

./: .bumpversion.cfg  .flake8  .gitignore  CITATION.bib  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  celeba_align_png_cropped_packets_CNN_0_batch_size_512_epochs_20.pt  lsun_bedroom_200k_png_logpackets_missing_4_CNN_1.pt  setup.cfg  setup.py  tox.ini  train_classifier.py  wavelet_plot.py
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst
log/: celeba_align_png_cropped_packets_regression.pkl  celeba_align_png_cropped_packets_regression_backup.pkl  celeba_align_png_cropped_raw_regression.pkl  lsun_bedroom_200k_png_logpackets_cnn.pkl  lsun_bedroom_200k_png_packets_cnn.pkl  lsun_bedroom_200k_png_packets_cnn.pt  packetsFalse.pkl  packetsTrue.pkl  packetsTruev2.pkl  plot_results.py  source_data_packets.pkl  source_data_packets_regression.pkl  source_data_raw.pkl  source_data_raw_regression.pkl
scripts/: baseline.sh  calc_acc_from_conf_mat.py  confusion_matrix.sh  multi_train_celabA.py  multi_train_ffhq.py  multi_train_ffhq_run.sh  multi_train_lsun.py  multi_train_lsun_run.sh  plot_ffhq.sh  prepare_dataset.sh  prepare_dataset_celebA.sh  prepare_dataset_celebA_log_db2_boundary.sh  prepare_dataset_celebA_log_db4_boundary.sh  prepare_dataset_celebA_log_haar.sh  prepare_dataset_celebA_log_sym2_boundary.sh  prepare_dataset_celebA_log_sym4_boundary.sh  prepare_dataset_lsun_log_db2_boundary.sh  prepare_dataset_lsun_log_db4_boundary.sh  prepare_dataset_lsun_log_sym2_boundary.sh  prepare_dataset_lsun_log_sym4_boundary.sh  prepare_ffhq_1024.sh  preprocess_ffhq_1024.sh  preprocess_ffhq_style_style2.sh  run_wavelet_plots.sh  setup-conda-env.sh  train_celebA.sh  train_celebA_cnn.sh  train_ffhq_stylegan.sh  train_lsun.sh  unzinp_ffhq.py
src/: data_loader.py  image_np.py  plot_results.py  prepare_dataset.py  wavelet_math.py
src/freqdect/: __init__.py  __main__.py  cli.py  confusion_matrix.py  corruption.py  crop_celeba.py  crop_lsun.py  data_loader.py  dct_math.py  fourier_math.py  image_np.py  models.py  plot_accuracy_results.py  plot_accuracy_simple.py  plot_linear_classifier.py  plot_mean_of_mean_packet_images.py  plot_mean_packets.py  plot_results.py  pre_processing.py  prepare_dataset.py  prepare_dataset_batched.py  prepare_stargan.py  resize_images_folder.py  saliency.py  saliency_process.py  train_classifier.py  version.py  wavelet_math.py  wavelet_plot.py
src/freqdect/baselines/: README.md  baselines.py  classifier.py  eigenface.py  knn.py  prnu.py  prnu_functions.py  utils.py
tests/: __init__.py  test_corruption.py  test_jpeg_compression.py  test_packets.py  test_version.py  test_welford.py
