##########################
# Setup.py Configuration #
##########################
[metadata]
name = freqdect
version = 0.0.1-dev
description = Detect GANs using frequency domain methods.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/gan-police/frequency-detection
download_url = https://github.com/gan-police/frequency-detection/releases
project_urls =
    Bug Tracker = https://github.com/gan-police/frequency-detection/issues
    Source Code = https://github.com/gan-police/frequency-detection

# Author information
author = Moritz Wolter
author_email = moritz@wolter.tech
maintainer = Moritz Wolter
maintainer_email = moritz@wolter.tech

# License Information
license = GPLv3
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cookiecutter
    snekpack
    deepfakes
    GANs
    wavelets
    fft
    fwt
    CNNs
    classification
    deep learning

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    torch
    matplotlib
    seaborn
    PyWavelets
    scipy
    pillow
    opencv-python
    ptwt

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    freqdect = freqdect.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = freqdect
omit =
    tests/*
    docs/*
    img/*

[coverage:paths]
source =
    src/freqdect
    .tox/*/lib/python*/site-packages/freqdect

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
